--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,18 @@ html, body{
     text-decoration: none;
     font-size: 1em;
     text-align: center;
-    margin: 32px 0px;
+    margin-top: 32px;
+}
+
+.headline-container .headline-content .sub-headline:hover {
+    color: rgb(48, 48, 48);
+    text-decoration: underline;
+}
+
+.headline-container .headline-content .headline-notice {
+    font-size: 0.8em;
+    margin-top: 2px;
+    text-transform: capitalize;
 }
 
 .headline-container .main-content{
